[package]
name = "vpnutils"
version = "0.1.0"
authors = ["Giacomo Bagnoli <gbagnoli@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version="*", default-features = false, features = ["sqlite"] }
dotenv = "0.15.0"
clap = { version= "3.0.14", features=["derive", "env"] }
libsqlite3-sys = { features=["bundled"], version=">=0.8.0, <0.23.0" }
dialoguer = { version="0.10", features=["password", "completion", "history"] }
age = { version = "0.7" }
anyhow = "1.0"
tempfile = "3"
