[package]
name = "vpnutils"
version = "0.1.0"
authors = ["Giacomo Bagnoli <gbagnoli@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version="1", default-features = false, features = ["sqlite"] }
diesel_migrations = "1"
dotenv = "0.15.0"
clap = { version= "3", features=["derive", "env"] }
libsqlite3-sys = { features=["bundled"], version=">=0.21.0,<0.23.0" }
dialoguer = { version="0.10", features=["password", "completion", "history"] }
age = { version = ">=0.7" }
anyhow = "1"
tempfile = "3"
thiserror = "1"
ipnet = "2"
shellwords = "1"
rustyline = "9"
xdg="2"
